# parcheck

./: Cargo.toml  README.md  todo.md
.github/workflows/: ci.yml
src/: controller.rs  lib.rs  operation.rs  runner.rs  schedule_tree.rs  task.rs
src/disabled/: mod.rs
src/enabled/: controller.rs  mod.rs  operation.rs  runner.rs  schedule_tree.rs  task.rs
tests/: integration.rs
tests/examples/: basic.rs  disabled.rs  locks.rs  mod.rs
