[package]
name = "parcheck"
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT"
authors = ["Stepan Tubanov"]
description = "Test permutations of concurrent scenarios"
repository = "https://github.com/stepantubanov/parcheck"
keywords = ["async", "testing"]
categories = ["concurrency", "development-tools::testing"]

[dependencies]
fastrand = { version = "2.1", optional = true }
futures-util = { version = "0.3", optional = true }
tokio = { version = "1", features = ["sync", "rt"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1" }

[features]
enable = ["dep:fastrand", "dep:tokio", "dep:futures-util"]
tracing = []

[package.metadata.docs.rs]
features = ["enable"]