[package]
name = "parcheck"
version = "0.1.0-alpha.2"
edition = "2021"
license = "MIT"
authors = ["Stepan Tubanov"]
description = "Test permutations of concurrent scenarios"
repository = "https://github.com/stepantubanov/parcheck"
keywords = ["async", "testing"]
categories = ["concurrency", "development-tools::testing"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
redundant_closure_for_method_calls = "allow"
large_include_file = "warn"

[dependencies]
fastrand = { version = "2.1", optional = true }
futures-util = { version = "0.3", optional = true }
pin-project-lite = { version = "0.2", optional = true }
tokio = { version = "1", features = ["sync", "rt"], optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1" }

[features]
enable = ["dep:fastrand", "dep:tokio", "dep:futures-util", "dep:pin-project-lite"]
tracing = ["dep:tracing"]

[package.metadata.docs.rs]
features = ["enable"]
